--- a/style.css
+++ b/style.css
@@ -119,13 +119,12 @@
 
 .ex-11-icon {
     font-size: 60px;
-    transition: all 2s;
 }
 
 .ex-11-icon:hover{
     animation-name: rotate-2;
     animation-duration: 1.5s;
-    animation-iteration-count:  infinite;
+    animation-iteration-count: infinite;
     animation-timing-function: linear;
 }
 
@@ -163,4 +162,60 @@
     background: #f5f5f5;
     width: 60px;
     height: 20px;
+}
+
+
+.ex-12-button:hover .ex-12-top-white{
+    animation-name: prima-row-top;
+    animation-duration: 2s;
+    animation-timing-function: linear;
+}
+
+@keyframes prima-row-top{
+    0% {top: -10px; left: 10%;}
+    50% {top: -10px; left: 70%;}
+    100% {top: -10px; left: 10%;}
+}
+
+.ex-12-button:hover .ex-12-bottom-white{
+    animation-name: prima-row-bottom;
+    animation-duration: 2s;
+    animation-timing-function: linear;
+}
+
+@keyframes prima-row-bottom{
+    0% {bottom: -10px; right: 20%;}
+    50% {bottom: -10px; right: 70%;}
+    100% {bottom: -10px; right: 20%;}
+}
+
+.ex-13-button:hover .ex-13-top-white{
+    animation-name: seconda-row-top;
+    animation-duration: 2s;
+    animation-timing-function: linear;
+}
+
+@keyframes seconda-row-top{
+    0% {top: -10px; left: 10%;}
+    20% {top: -10px; left: 75%;}
+    40% {top: 55px; left: 75%;}
+    60% {top: 55px; left: -5%;}
+    80% {top: -10px; left: -5%;}
+    100% {top: -10px; left: 10%;}
+
+}
+
+.ex-13-button:hover .ex-13-bottom-white{
+    animation-name: seconda-row-bottom;
+    animation-duration: 2s;
+    animation-timing-function: linear;
+}
+
+@keyframes seconda-row-bottom{
+    0% {bottom: -10px; right: 20%;}
+    20% {bottom: -10px; right: 75%;}
+    40% {bottom: 55px; right: 75%;}
+    60% {bottom: 55px; right: -5%;}
+    80% {bottom: -10px; right: -5%;}
+    100% {bottom: -10px; right: 20%;}
 }
